Temporarily fix menu styles to make ‘em readable

--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -24,10 +24,6 @@ h1, h2, h3, h4, h5, h6 {
   padding-top: 10px;
   padding-bottom: 10px;
 
-  a {
-    color: #5D6B72;
-  }
-
   > li > a {
     padding: 5px 20px;
   }
@@ -39,12 +35,19 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 90%;
   }
 
-  li.active > a {
-    font-weight: bold;
+  li > a {
+    color: $color;
+
+    &:hover {
+      background-color: lighten($background-active, 10%);
+      color: $color;
+    }
   }
 
-  li.active > a {
-    color: #34789a;
+  li.active > a,
+  li.active > a:hover {
+    color: $color-secondary;
+    background-color: $background-active;
   }
 }
 
@@ -80,8 +83,8 @@ pre {
 }
 
 .opal-nav {
-  background-color: $background;
   border: 0px;
+  background-color: $background;
   border-bottom: 1px solid $background-border;
   color: $color;
 
@@ -106,12 +109,13 @@ pre {
   .navbar-toggle .icon-bar {
       background-color: #fff;
   }
+
   .navbar-nav > li > a {
     color: $color;
 
     &:hover {
       background-color: lighten($background-active, 10%);
-      color: $color-secondary;
+      color: $color;
     }
   }
 
@@ -136,8 +140,8 @@ pre {
 
 body > footer {
   padding: 20px 0;
-//  padding-bottom: 50%;
-//  margin-bottom: -50%;
+  // padding-bottom: 50%;
+  // margin-bottom: -50%;
   margin-top: 70px;
   border-top: 1px solid #e5e5e5;
   background-color: $background;
@@ -145,6 +149,7 @@ body > footer {
   color: $color;
   word-spacing: 0.3em;
   a {
+    color: $color-secondary;
     &:hover {
       color: $color;
     }
